less/main/theme.less
// ----------------------------------------
// Text Love: LESS > Main > Theme
// ----------------------------------------
// This contains all styles that are not
// widgets.
//
// #Header
// #Site Styles
// #Header
// #Page Styles
// #Content
// #Footer
//
// ----------------------------------------

// ------------------------------
// #Header
// ------------------------------

.template__header {
	position: fixed;
	top: 0;
	left: 0;
	right: 0;
	z-index: 100;
	background-color: transparent;
	border-bottom: 1px solid @color__header--border;
	.transition();
	.header-border-removal();
	padding: 0 30px;

	@media @mobile {
		padding: 0 8%;
	}
	
	&--small {
	    background-color: @color__container--background; 
	}
}

.header__flexbox {
	display: flex;
	display: -webkit-flex;
	-webkit-align-items: center;
    align-items: center;
    -webkit-align-self: center;
    align-self: center;
}

.page--default {
	.template__header {
		background-color: @color__header--background;
	}
}


// ------------------------------
// #Site Styles
// ------------------------------

* {
	.box-sizing(border-box);
	margin: 0;
    padding: 0;
	
	&:focus {
		outline: none;
	}
}

html, body {
	font-smooth: always;
	font-smoothing: antialiased;
	-moz-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
	-webkit-font-smoothing: antialiased;
	text-rendering: optimizeLegibility;
    background-color: @color__body--background;

    // First Layer Background / fixed image in Text Love / Test it!!!

    background-attachment: fixed;
	background-image: image('/images/main-bg.jpg');
	background-size: cover;
	background-position: center center;
	
	.make-font-a-little-smaller(@font__p--font-size);
	.make-font-smaller(@font__p--font-size);
	.make-font-a-lot-smaller(@font__p--font-size);
	
	// iOS fix of VH unit
    width: -webkit-calc(100% - 0px);
    overflow-x: hidden;
}


// Site Container

.site-container {
    @media @bp-global-above-fullwidth {
    }
}

// Green overlay

.widget__item {
    padding: 0;
}

// HTML5 Semantic Elements

article, aside, dialog, figcaption, figure, footer, header, hgroup, main, nav, section {
	display: block;
}


// ------------------------------
// #Content
// ------------------------------

// Main

.template__content {
	padding: @header-height 0;
	background-color: @color__container--background; 
	min-height: 90vh;
	position: relative;
	z-index: 2;

	@media @tablet-horizontal {
		padding: @header-height*0.7 0;
	}
	@media @tablet {
		padding: @header-height*0.6 0;
	}
	@media @mobile {
		margin-bottom: @header-height*4;
		padding: @header-height*0.5 0;
	}
}

// Container

.container {
	width: 90%;
	max-width: 1200px;
    margin: 0 auto;

	@media @mobile {
		width: 84%;
	}
}

// ------------------------------
// #Footer
// ------------------------------

.template__footer {
    width: 100%;
    background-color: @color__footer--background;
    border-top: 10px solid @color__footer--border;
    padding: @header-height*0.5 0;
    bottom: 0;
    z-index: 1;
	// Widget
	.profile, .content {
		opacity: .6;
	}
	.texteditor-toolbar-wrapper {
	    position: static;
	    
	}
}

.footerright {
	text-align: right;
}

.footerleft {
	text-align: left;
}

.footerright, .footerleft {
	display: inline-block;
	vertical-align: middle;
	width: 49.5%;
	@media @mobile {
		width: 100%;
		text-align: center;
	}
}

.gdpr-footer {
    position: fixed;
    bottom: 0;
    left: 0;
    right: 0;
    background-color: @color__footer--background;
	padding: 10px 5%;
		
	@media @mobile {
		padding: 10px 8%;
	}
    
    .gdpr-footer__link {
		color: @color__p--text;
		font-size: @font__p--font-size;
		padding: 5px 10px;
    }
}

